- Better <tab> complete for file pickers
- Improve and fix some bugs regarding undo
- Fix copy command not including last character
- More theme updates thanks to @JonathanBlow and @AllenWebster
- Now buffers and their view are seperated and we can have multiple views (windows) for same buffer and editing at the same time
- Solarized_Dark & Solarized_Light theme
- Highlight matching open/close parens/braces/brackets
- Remove word lexer and calculate word boundaries real time
- QueryReplace Command: functionality similar to emacs
- Fix bug when doing ISearch first visible line was hidden behind ISearch prompt.

v0.4
=====================
- BuildWindow: Special window rendered at bottom of screen for showing compile results.
- Lexer infrastructure for rich features based on syntax.
- Compilation: Compilation prompt && Compilation buffer.
- CompileAsk and CompileNoAsk methods for Buffers.
- Fix Horizontal Splits.
- Improve font loading code, now we have default fonts embedded in executable.
- Refactor Syntax Highlighting
- Move statusbar to the top
- Refactor Isearch
- Improve DeleteWordBackward
- Mouse Click now switches to correct window
- Theme System
- Decrease CPU consumption
- C-l centralizes the view
- 4coder_fleury theme.
- Naysayer theme based on Jonathan Blow Emacs theme


v0.3
======================
Multiple Cursors (WIP):
Another selection on match
Another selection next line
Moving all selections in a direction: up/down/left/right
Multiple Windows (WIP):
spliting vertically
spliting horizontaly (WIP)
Closing window


v0.2
======================
- Fuzzy File finder
- Handling resizing events correctly in text buffer
- zoom in/out
- crashlogs
- undo
- grep buffer
- revert from disk
- scroll if needed


v0.1
======================
- Basic syntax highlighting
- Cut/Copy/Paste
- Selecting text
- config file
- mouse/keyboard cursor movement
- handle tabs correctly
- buffers, keymaps and commands ( infrastructure )









